refactor: 优化部分代码
修复 Sonar 扫描问题